--- a/portafolio/briefcase.html
+++ b/portafolio/briefcase.html
@@ -21,7 +21,7 @@
     <p>-se utilizar software para diseño de interfaces como lo es figma</p>
     <p>-conosimientos basicos en photoshop e illustrator</p>
     <h2>Proyectos</h2>
-    <p>-este es el sitio web que estoy desarrollando en el curso de bectronix: <a href="../Pagina/">acceder al sitio</a></p> <!--rellenar directorio-->
+    <p>-este es mi repositorio de github: <a href="https://github.com/ElGabUwU/primer_ropositorio">https://github.com/ElGabUwU/primer_ropositorio</a></p> <!--rellenar directorio-->
     <p>-planos de mi acelerador de particulas (<strong>aun en desarrollo</strong>): <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><b>ver planos</b></a></p>
 </body>
 </html>
